--- a/layouts/partials/templates/opengraph.html
+++ b/layouts/partials/templates/opengraph.html
@@ -1,7 +1,6 @@
-{{/* Override sicuro per OG tags:
+{{/* Override sicuro OG tags:
      - Usa .Params.images[0] se presente
-     - Altrimenti tenta .Params.cover se stringa URL
-     - Evita accessi a .Params.cover.image (no crash) */}}
+     - Altrimenti tenta .Params.cover se stringa URL */}}
 
 {{- $ctx := . -}}
 {{- $ogimg := "" -}}
